release: prepare WePush Next 0.1.0-beta.1