@@ -6,11 +6,15 @@
     <parent>
         <groupId>com.fangxuele.wepush.next</groupId>
         <artifactId>wepush-next-parent</artifactId>
-        <version>0.1.0-alpha.4</version>
+        <version>0.1.0-beta.1</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>service-app</artifactId>
     <name>WePush Next :: Service App</name>
+    <properties>
+        <mockito.version>5.23.0</mockito.version>
+        <wepush.test.jvm.args>--enable-native-access=ALL-UNNAMED -Xshare:off -javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar</wepush.test.jvm.args>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
